--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
 //    implementation'com.jakewharton:butterknife:10.2.0'
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
     implementation 'joda-time:joda-time:2.9.6'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
 }
