--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,17 @@ dependencies {
     // EVENT BUS
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+    // TEST
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    testImplementation 'org.hamcrest:java-hamcrest:2.0.0.0'
+
 
     implementation 'joda-time:joda-time:2.9.6'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
 
 }
